--- a/Percolation/index.html
+++ b/Percolation/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Percolation Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script src="main.js"></script>    
+    <script src="js/main.js"></script>    
 </head>
 <body>
     <canvas id="percolation-demo"></canvas>
